force-app/main/default/objects/Factory_Compliance_Report__c/Factory_Compliance_Report__c.object-meta.xml
<CustomObject>
    <description>Demo for TechEff project (Unilever)</description>
    <label>Compliance Header</label>
    <nameField>
        <displayFormat>Compl-{000000000}</displayFormat>
        <label>Compliance Header</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factory Compliance Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>