force-app/main/default/objects/Factory_Compliance_Report__c/fields/Date_From_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_From_Formula__c</fullName>
    <formula>TEXT( Date_From__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZZZ_Date From Formula</label>
    <type>Text</type>
</CustomField>