force-app/main/default/objects/Factory_Compliance_Report__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Factory_Compliance_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>