force-app/main/default/objects/Factory_Compliance_Report__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11000185</fullName>
            </value>
            <value>
                <fullName>11000192</fullName>
            </value>
            <value>
                <fullName>11000207</fullName>
            </value>
            <value>
                <fullName>11000261</fullName>
            </value>
            <value>
                <fullName>11000373</fullName>
            </value>
            <value>
                <fullName>11000374</fullName>
            </value>
            <value>
                <fullName>11001763</fullName>
            </value>
            <value>
                <fullName>11003250</fullName>
            </value>
            <value>
                <fullName>11004271</fullName>
            </value>
            <value>
                <fullName>11059682</fullName>
            </value>
            <value>
                <fullName>11066021</fullName>
            </value>
            <value>
                <fullName>11068491</fullName>
            </value>
            <value>
                <fullName>11477968</fullName>
            </value>
            <value>
                <fullName>67404496</fullName>
            </value>
            <value>
                <fullName>67416285</fullName>
            </value>
            <value>
                <fullName>67565655</fullName>
            </value>
            <value>
                <fullName>67620144</fullName>
            </value>
            <value>
                <fullName>67620147</fullName>
            </value>
            <value>
                <fullName>67620155</fullName>
            </value>
            <value>
                <fullName>67642059</fullName>
            </value>
            <value>
                <fullName>67702678</fullName>
            </value>
            <value>
                <fullName>11800025</fullName>
            </value>
            <value>
                <fullName>11800313</fullName>
            </value>
            <value>
                <fullName>11819788</fullName>
            </value>
            <value>
                <fullName>11823622</fullName>
            </value>
            <value>
                <fullName>11841911</fullName>
            </value>
            <value>
                <fullName>67505100</fullName>
            </value>
            <value>
                <fullName>67655744</fullName>
            </value>
            <value>
                <fullName>67730945</fullName>
            </value>
            <value>
                <fullName>11056421</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>