force-app/main/default/objects/Factory_Compliance_Report__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <inlineHelpText>Select your plant code</inlineHelpText>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UGR</fullName>
            </value>
            <value>
                <fullName>UGA</fullName>
            </value>
            <value>
                <fullName>UHB</fullName>
            </value>
            <value>
                <fullName>UKN</fullName>
            </value>
            <value>
                <fullName>UOI</fullName>
            </value>
            <value>
                <fullName>UPX</fullName>
            </value>
            <value>
                <fullName>UAQ</fullName>
            </value>
            <value>
                <fullName>UAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>