force-app/main/default/objects/Factory_Compliance_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISPICKVAL(Status_Code__c, &quot;1&quot;), IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Green&quot;,30,60),
IF( ISPICKVAL(Status_Code__c, &quot;2&quot;), IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;Red&quot;,30,60),
IF( ISPICKVAL(Status_Code__c, &quot;3&quot;), IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;Yellow&quot;,30,60),
IF( ISPICKVAL(Status_Code__c, &quot;4&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015a00000039PAD&quot;,&quot;Orange&quot;),
null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>