force-app/main/default/objects/Factory_Compliance_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Material_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>